# keras-model-ros-workspace-

./: README.md
c_python_test1/: run_graph.txt  saved_variable.data-00000-of-00001  saved_variable.index
c_python_test1/devel/: .catkin  .rosinstall  setup.sh
c_python_test1/devel/lib/pkgconfig/: pythonpacktest.pc
c_python_test1/devel/lib/pythonpacktest/: main
c_python_test1/devel/share/pythonpacktest/cmake/: pythonpacktestConfig.cmake
c_python_test1/graphs/: events.out.tfevents.1554458575.why-virtual-machine  events.out.tfevents.1554460146.why-virtual-machine  events.out.tfevents.1554460228.why-virtual-machine  events.out.tfevents.1554460237.why-virtual-machine  events.out.tfevents.1554460316.why-virtual-machine  events.out.tfevents.1554460421.why-virtual-machine  events.out.tfevents.1554460438.why-virtual-machine  events.out.tfevents.1554460970.why-virtual-machine  events.out.tfevents.1554461096.why-virtual-machine
c_python_test1/src/pythonpacktest/: CMakeLists.txt
c_python_test1/src/pythonpacktest/src/: main.cpp  mnist_test.py  nn_test.py  pythontest1.py  real_test1.py  real_test2.py  real_test3.py  test0405.py  tf_test1.py
